@@ -5,7 +5,6 @@
 *)
 
 Module example Import lib_logic;
-
 Goal {A,B:Prop}(A /\ B) -> (B /\ A);
 intros;
 Refine H;
